--- a/app/templates/project_applications.html
+++ b/app/templates/project_applications.html
@@ -14,7 +14,7 @@
   </nav>
 
   <div class="applications-wrapper">
-    <h2>Заявки по проекту №{{ project_id }}</h2>
+    <h2> Replies for №{{ project_id }}</h2>
     <div id="appsMessage" class="message"></div>
 
     <!-- Контейнер для сетки карточек заявок -->
