--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -20,7 +20,7 @@
   --font-base: 'Arial', sans-serif;
   --font-heading: 'Segoe UI', Tahoma, sans-serif;
 
-  --radius-card: 8px;
+  --radius-card: 30px;
   --radius-button: 4px;
 
   --shadow-light: 0 2px 4px rgba(0,0,0,0.04);
@@ -147,6 +147,8 @@ nav .nav-right button:hover {
 .project-detail-card .card-header {
   background-color: var(--color-accent);
   color: #fff;
+  text-align: center;
+  
   font-family: var(--font-heading);
   font-size: 1.25rem;
   padding: 16px;
@@ -183,6 +185,7 @@ nav .nav-right button:hover {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   gap: 20px;
+  width: 100%;
 }
 
 /* Когда у контейнера есть класс "employer" — одна колонка */
@@ -430,6 +433,43 @@ button.primary-btn:disabled {
   background-color: var(--color-primary-hover);
 }
 
+.logoutBtn {
+    background: none;
+    border: none;
+    color: var(--color-primary);
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.logoutBtn:hover {
+  background-color: #f5f5f5;
+  border-color: #aaa;
+}
+
+.logoutBtn:active {
+  background-color: #e9e9e9;
+  border-color: #888;
+}
+
+@media (max-width: 600px) {
+  .logoutBtn {
+    padding: 6px 12px;
+    font-size: 1.05rem;
+  }
+}
+.profile-card, .reviews-section{
+    margin-top: 20px !important;
+
+  }
+
+  .card{
+    max-width: 600px;
+    text-align: center;
+    
+  }
+  .cardy{
+    margin: 0 auto 24px auto;
+  }
 /* ──────────────────────────────────────────────────────────
    Адаптив: на очень узких экранах все карточки в один столбец
 ────────────────────────────────────────────────────────── */
@@ -452,5 +492,16 @@ button.primary-btn:disabled {
     font-size: 0.8rem;
     padding: 8px 12px;
   }
+  .button.primary-btn {
+    padding: 10px 14px;
+  }
+  .primary-btn {
+    padding: 5px 8px !important;
+  }
+  .profile-card, .reviews-section{
+    margin-top: 20px !important;
+    max-width: 350px !important;
+  }
+  .logo{}
 }
 
